Fix from StackOverflow

--- a/index.css
+++ b/index.css
@@ -378,3 +378,13 @@ opacity: 0.3;
 .container6:hover .middle1 {
 opacity: 1;
 }
+
+.card-body .fa {
+  position: relative;
+}
+.card-body .fa::before {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
